...
      },
      child: Scaffold(
        backgroundColor: AppConfig.surfaceColor,
        appBar: AppBar(
          backgroundColor: AppConfig.primaryColor,
          foregroundColor: Colors.white,
          title: const Text('เพิ่มรถบรรทุก'),
          elevation: 0,
        ),
        body: BlocBuilder<TruckBloc, TruckState>(
          builder: (context, state) {
            final isLoading = state is TruckLoading;
            return SingleChildScrollView(
...
